# docs/swagger.json
@@ -5,7 +5,7 @@
     },
     "paths": {
         "/student/card/balance": {
-            "get": {
+            "post": {
                 "description": "校园卡余额查询",
                 "produces": [
                     "application/json"
@@ -14,6 +14,26 @@
                     "校园卡"
                 ],
                 "summary": "校园卡余额查询",
+                "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\":200,\"data\":123.4,\"msg\":\"OK\"}",
@@ -41,6 +61,24 @@
                 ],
                 "summary": "校园卡历史查询",
                 "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     {
                         "description": "年份",
                         "name": "year",
@@ -77,7 +115,7 @@
             }
         },
         "/student/card/today": {
-            "get": {
+            "post": {
                 "description": "校园卡今日消费查询",
                 "produces": [
                     "application/json"
@@ -86,6 +124,26 @@
                     "校园卡"
                 ],
                 "summary": "校园卡今日消费查询",
+                "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\":200,\"data\":[{}],\"msg\":\"OK\"}",
@@ -103,7 +161,7 @@
             }
         },
         "/student/library/current/0": {
-            "get": {
+            "post": {
                 "description": "图书馆当前借书记录",
                 "produces": [
                     "application/json"
@@ -112,6 +170,26 @@
                     "图书馆"
                 ],
                 "summary": "图书馆当前借书记录",
+                "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\":200,\"data\":[{...}],\"msg\":\"OK\"}",
@@ -129,7 +207,7 @@
             }
         },
         "/student/library/history/0": {
-            "get": {
+            "post": {
                 "description": "图书馆借书记录（暂时只支持10本）",
                 "produces": [
                     "application/json"
@@ -138,6 +216,26 @@
                     "图书馆"
                 ],
                 "summary": "图书馆历史借书记录",
+                "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\":200,\"data\":[{...}],\"msg\":\"OK\"}",
@@ -187,6 +285,7 @@
                         "description": "用户名",
                         "name": "username",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -195,6 +294,7 @@
                         "description": "密码",
                         "name": "password",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -249,6 +349,7 @@
                         "description": "用户名",
                         "name": "username",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -257,6 +358,7 @@
                         "description": "密码",
                         "name": "password",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -311,6 +413,7 @@
                         "description": "用户名",
                         "name": "username",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -319,6 +422,7 @@
                         "description": "密码",
                         "name": "password",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
